--- a/Javascript/JavaScript30-master/01 - JavaScript Drum Kit/index-START.html
+++ b/Javascript/JavaScript30-master/01 - JavaScript Drum Kit/index-START.html
@@ -60,9 +60,24 @@
 <script>
   window.addEventListener('keydown', function(e){
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
     if (!audio) return;
     console.log(audio);
+    console.log(key);
+    audio.currentTime = 0;
     audio.play();
+    key.classList.add('playing')
+    
+    let removeTransition = function(e){
+      if (e.propertyName !== 'transform') return;
+      console.log(e)
+      this.classList.remove('playing')
+    }
+
+    const keys = document.querySelectorAll('.key')
+
+    keys.forEach( key => key.addEventListener('transitionend', removeTransition))
+
   })
 
 </script>
