Weather App catch error added

--- a/Javascript/The_Complete_JS_Course_Jonas_Schetdman/8-asynchronous-JS/starter/asynchronous.html
+++ b/Javascript/The_Complete_JS_Course_Jonas_Schetdman/8-asynchronous-JS/starter/asynchronous.html
@@ -321,6 +321,7 @@
                         UIController.DisplayCallingCode(country);
                     
                     })
+                    .catch(error => console.log(error))
                 }
                 
             }
@@ -394,6 +395,7 @@
                         UICtlr.DisplayTemp(weather)
                         UICtlr.DisplayCountryInfos(weather)
                     })
+                    .catch(error => console.log(error))
 
                 // formatting Url
                 // sending url
