--- a/Javascript/JavaScript_Ninja/NinjaQuiz_App/index.html
+++ b/Javascript/JavaScript_Ninja/NinjaQuiz_App/index.html
@@ -15,6 +15,13 @@
     </div>
   </section>
 
+  <!-- result section -->
+  <section class="result py-4 d-none bg-light text-center">
+    <div class="container lead">
+      <p>You are <span class="text-primary display-4 p-3">0%</span> ninja</p>
+    </div>
+  </section>
+
   <!-- quiz section -->
   <section class="quiz py-4 bg-primary">
     <div class="container">
@@ -72,5 +79,6 @@
 
     </div>
   </section>
+  <script src="index.js"></script>
 </body>
 </html>
