--- a/Javascript/JavaScript_Ninja/chat_project/index.html
+++ b/Javascript/JavaScript_Ninja/chat_project/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-firestore.js"></script>
     <title>Chat Room</title>
 </head>
 <body>
@@ -57,6 +60,25 @@
         </form>
         
     </div>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#config-web-app -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCHe7jJFmLD12BI53YMdEmeqMIw3m27xWw",
+    authDomain: "ninja-firestore-85427.firebaseapp.com",
+    databaseURL: "https://ninja-firestore-85427.firebaseio.com",
+    projectId: "ninja-firestore-85427",
+    storageBucket: "ninja-firestore-85427.appspot.com",
+    messagingSenderId: "842939496278", 
+    appId: "1:842939496278:web:990e50c88af1278b"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+</script>
     <script src="./scripts/chat.js"></script>
     <script src="./scripts/ui.js"></script>
     <script src="./scripts/app.js"></script>
