--- a/Javascript/JavaScript30-master/01 - JavaScript Drum Kit/index-START.html
+++ b/Javascript/JavaScript30-master/01 - JavaScript Drum Kit/index-START.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -62,16 +62,14 @@
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
     const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
     if (!audio) return;
-    console.log(audio);
-    console.log(key);
+
     audio.currentTime = 0;
     audio.play();
     key.classList.add('playing')
     
     let removeTransition = function(e){
       if (e.propertyName !== 'transform') return;
-      console.log(e)
-      this.classList.remove('playing')
+      this.classList.remove('playing');
     }
 
     const keys = document.querySelectorAll('.key')
