--- a/Javascript/JavaScript30-master/03 - CSS Variables/index-START.html
+++ b/Javascript/JavaScript30-master/03 - CSS Variables/index-START.html
@@ -18,13 +18,24 @@
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="https://images.unsplash.com/photo-1463693396721-8ca0cfa2b3b5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80">
 
   <style>
+    :root {
+      --base: #ffc600;
+      --blur: 50px;
+      --spacing: 10px;
+    }
 
     /*
       misc styles, nothing to do with CSS variables
     */
+
+    img {
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
 
     body {
       text-align: center;
@@ -33,6 +44,10 @@
       font-family: 'helvetica neue', sans-serif;
       font-weight: 100;
       font-size: 50px;
+    }
+
+    .hl {
+      color: var(--base);
     }
 
     .controls {
@@ -45,6 +60,31 @@
   </style>
 
   <script>
+    const inputs = document.querySelectorAll('input')
+
+    const handleUpdate = function() {
+      const units = this.dataSet.sizing || '';
+      console.log(this.value);
+
+      document.documentElement.style.setProperty(`${this.name}`, `${this.value}${units}` );
+
+      // 2nd way
+      // if (this.name === 'spacing') {
+      //   document.documentElement.style.setProperty('--spacing', `${this.value}px` );
+      // } else if (this.name === 'blur') {
+      //   document.documentElement.style.setProperty('--blur', `${this.value}px`);
+      // } else
+      //   document.documentElement.style.setProperty('--base', `${this.value}`);      
+    }
+
+    inputs.forEach(input => input.addEventListener('change', handleUpdate));
+    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
+
+
+    
+
+
+
   </script>
 
 </body>
