--- a/Javascript/JavaScript30-master/09 - Dev Tools Domination/index-START.html
+++ b/Javascript/JavaScript30-master/09 - Dev Tools Domination/index-START.html
@@ -18,8 +18,9 @@
     }
 
     // Regular
-
+    console.log('hello')
     // Interpolated
+    console.log('hello I am a %s string', ':p')
 
     // Styled
 
