rendering Notes-app

--- a/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/index.html
+++ b/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/index.html
@@ -9,7 +9,11 @@
 <body>
     <h1>Notes - App</h1>
     <h2>Takes notes and never forget</h2>
-    
+    <section>
+            <ul class="note-list">
+            </ul>
+    </section>
+
     <p>This application was created by Didier Ukanda</p>
     
     <script src="./main.js"></script>
