Andrew Mead Todos-App Theme v 1.0.0

--- a/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/index.html
+++ b/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/index.html
@@ -18,11 +18,10 @@
     </section>
 
     <div class="btn-group">
-        <form action="/" method="get">
+        <form action="/" method="get" id="note-form">
             <input type="text" name="newNote" id="new-note" placeholder="Add Note ... ">
             <button id="create-btn">Create a Note</button>
         </form>
-        <!-- <button id="delete-btn">Delete All Notes</button> -->
     </div>
 
     <p>This application was created by Didier Ukanda</p>
