Andrew Mead LocalStorage SetUp in NoteApp and TodoApp

--- a/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/index.html
+++ b/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/index.html
@@ -25,7 +25,8 @@
     <div class="btn-group">
         <form action="/" method="get" id="note-form">
             <p><label for="checkbox"><input type="checkbox" name="checkbox" id="checkbox">checkbox</label></p>
-            <input type="text" name="newNote" id="new-note" placeholder="Add Note ... ">
+            <input type="text" name="newTitle" id="new-title" placeholder="Add Title ... ">
+            <input type="text" name="newNote" id="new-note" placeholder="Add Body ... ">
             <button id="create-btn">Create a Note</button>
         </form>
     </div>
