Andrew Mead Refactoring Notes-App

--- a/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/index.html
+++ b/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <p>This application was created by Didier Ukanda</p>
-    
-    <script src="./main.js"></script>
+    <script src="./notes-functions.js"></script>
+    <script src="./notes-app.js"></script>
 </body>
 </html>
