--- a/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/index.html
+++ b/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/86dabd5a7e.js"></script>
     <title>Note-App</title>
 </head>
 <body>
