--- a/Javascript/The Moder Js BootCamp by AndrewMead/todos-App/index.html
+++ b/Javascript/The Moder Js BootCamp by AndrewMead/todos-App/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/86dabd5a7e.js"></script>
     <title>Todo App</title>
 </head>
 <body>
@@ -25,7 +26,8 @@
         <input type="text" name="addTodo" id="new-todo-text" placeholder="Add Todo ...">
         <button>Add Todo</button>
     </form>
-    <script src="./main.js"></script>
+    <script src="./todos-functions.js"></script>
+    <script src="./todos-app.js"></script>
 <style>
     :root {
         --background-base: #403129;
@@ -73,6 +75,9 @@
         font-size: 1.15em;
         margin-bottom: 5px;
         padding: .40em;
+    }
+    i:hover {
+        cursor: pointer;
     }
 
     .invisible {
