--- a/Javascript/The Moder Js BootCamp by AndrewMead/todos-App/index.html
+++ b/Javascript/The Moder Js BootCamp by AndrewMead/todos-App/index.html
@@ -26,6 +26,7 @@
         <input type="text" name="addTodo" id="new-todo-text" placeholder="Add Todo ...">
         <button>Add Todo</button>
     </form>
+    <script src="./uuidv4.js"></script>
     <script src="./todos-functions.js"></script>
     <script src="./todos-app.js"></script>
 <style>
