window onstorage setup Date()

--- a/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/index.html
+++ b/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/index.html
@@ -20,6 +20,10 @@
         color: goldenrod;
         text-decoration: none;
     }
+
+    i{
+        cursor: pointer;
+    }
 </style>
 <body>
     <h1>Notes - App</h1>
