--- a/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/edit.html
+++ b/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/edit.html
@@ -15,6 +15,7 @@
     <h1>This is the Editing Page</h1>
     <div> <input name="editInput" id="note-title" placeholder="Note Title"></div>
     <textarea name="" id="note-body" placeholder="Enter Note Text"></textarea>
+    <button id="remove-note">Remove Note</button>
     <a href="./index.html">My Text for the link</a>
 <script src="./notes-functions.js"></script>
 <script src="./notes-edit.js"></script>
