Andrew Mead - Notes-App _ drowndown last version

--- a/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/edit.html
+++ b/Javascript/The Moder Js BootCamp by AndrewMead/notes-App/edit.html
@@ -13,10 +13,12 @@
 </style>
 <body>
     <h1>This is the Editing Page</h1>
-    <div> <input name="editInput" id="note-title" placeholder="Note Title"></div>
+    <input name="editInput" id="note-title" placeholder="Note Title">
+    <span id="last-edited"></span>
     <textarea name="" id="note-body" placeholder="Enter Note Text"></textarea>
     <button id="remove-note">Remove Note</button>
     <a href="./index.html">My Text for the link</a>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js" integrity="sha256-AdQN98MVZs44Eq2yTwtoKufhnU+uZ7v2kXnD5vqzZVo=" crossorigin="anonymous"></script>
 <script src="./notes-functions.js"></script>
 <script src="./notes-edit.js"></script>
 </body>
